{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 375,
  "lineage": "0b9920dd-a0e0-5709-76c7-bd62b901b937",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-app-webserver-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092dd7fbe242fe07b",
            "arn": "arn:aws:ec2:us-east-2:545268153107:instance/i-05058fd412e80a8cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05058fd412e80a8cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c2a8b49134a9f00",
            "private_dns": "ip-10-0-1-36.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.36",
            "public_dns": "ec2-18-218-59-239.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.59.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a5b24456398388c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b87a0ba9f324bf53",
            "tags": {
              "Name": "web-server-app1"
            },
            "tags_all": {
              "Name": "web-server-app1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbdde8fba303a09c"
            ]
          },
          "dependencies": [
            "aws_security_group.my-app-sg",
            "aws_subnet.dev-sub-1",
            "aws_vpc.development-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092dd7fbe242fe07b",
            "arn": "arn:aws:ec2:us-east-2:545268153107:instance/i-0d2d12d418bf866a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2d12d418bf866a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef190f3a482461bf",
            "private_dns": "ip-10-0-1-217.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.217",
            "public_dns": "ec2-18-221-69-24.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.69.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072e0c6a22186142a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b87a0ba9f324bf53",
            "tags": {
              "Name": "web-server-app1"
            },
            "tags_all": {
              "Name": "web-server-app1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbdde8fba303a09c"
            ]
          },
          "dependencies": [
            "aws_security_group.my-app-sg",
            "aws_subnet.dev-sub-1",
            "aws_vpc.development-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-app-webserver-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092dd7fbe242fe07b",
            "arn": "arn:aws:ec2:us-east-2:545268153107:instance/i-0ccfdd4a1734c2629",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ccfdd4a1734c2629",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "my-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cff3563e9d1efe68",
            "private_dns": "ip-10-0-1-151.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-3-144-117-37.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.117.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-014123aa4b9899046",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b87a0ba9f324bf53",
            "tags": {
              "Name": "dev-server"
            },
            "tags_all": {
              "Name": "dev-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbdde8fba303a09c"
            ]
          },
          "dependencies": [
            "aws_security_group.my-app-sg",
            "aws_subnet.dev-sub-1",
            "aws_vpc.development-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092dd7fbe242fe07b",
            "arn": "arn:aws:ec2:us-east-2:545268153107:instance/i-0bb983a15fd081917",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb983a15fd081917",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "my-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0527d111d56bbea38",
            "private_dns": "ip-10-0-1-225.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.225",
            "public_dns": "ec2-3-15-139-203.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.139.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072ebc11bd3b6cb35",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b87a0ba9f324bf53",
            "tags": {
              "Name": "dev-server"
            },
            "tags_all": {
              "Name": "dev-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbdde8fba303a09c"
            ]
          },
          "dependencies": [
            "aws_security_group.my-app-sg",
            "aws_subnet.dev-sub-1",
            "aws_vpc.development-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-app-webserver-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092dd7fbe242fe07b",
            "arn": "arn:aws:ec2:us-east-2:545268153107:instance/i-06ac7b4e95d9164de",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ac7b4e95d9164de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "my-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0061204b6a40808fa",
            "private_dns": "ip-10-0-1-182.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-3-15-220-116.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.220.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041dd5a5a01624e3d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b87a0ba9f324bf53",
            "tags": {
              "Name": "prod-server"
            },
            "tags_all": {
              "Name": "prod-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbdde8fba303a09c"
            ]
          },
          "dependencies": [
            "aws_security_group.my-app-sg",
            "aws_subnet.dev-sub-1",
            "aws_vpc.development-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092dd7fbe242fe07b",
            "arn": "arn:aws:ec2:us-east-2:545268153107:instance/i-0dca5a5b01ec20591",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dca5a5b01ec20591",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "my-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-075655d6fa078a023",
            "private_dns": "ip-10-0-1-105.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.105",
            "public_dns": "ec2-18-119-124-171.us-east-2.compute.amazonaws.com",
            "public_ip": "18.119.124.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08b88bd2ffa0f1dcd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b87a0ba9f324bf53",
            "tags": {
              "Name": "prod-server"
            },
            "tags_all": {
              "Name": "prod-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbdde8fba303a09c"
            ]
          },
          "dependencies": [
            "aws_security_group.my-app-sg",
            "aws_subnet.dev-sub-1",
            "aws_vpc.development-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-app-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545268153107:internet-gateway/igw-0380ddfe3cb7bcbc0",
            "id": "igw-0380ddfe3cb7bcbc0",
            "owner_id": "545268153107",
            "tags": {
              "Name": "docker-ec2-gw"
            },
            "tags_all": {
              "Name": "docker-ec2-gw"
            },
            "vpc_id": "vpc-0d0a52de2e05b3a60"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myapp-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545268153107:route-table/rtb-056847db5d8ccd66d",
            "id": "rtb-056847db5d8ccd66d",
            "owner_id": "545268153107",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0380ddfe3cb7bcbc0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "docker-ec2-RT"
            },
            "tags_all": {
              "Name": "docker-ec2-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0a52de2e05b3a60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-app-gw",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004ae5147459b971d",
            "route_table_id": "rtb-056847db5d8ccd66d",
            "subnet_id": "subnet-0b87a0ba9f324bf53"
          },
          "dependencies": [
            "aws_internet_gateway.my-app-gw",
            "aws_route_table.myapp-RT",
            "aws_subnet.dev-sub-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub-asso1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000dfcba81c492804",
            "route_table_id": "rtb-056847db5d8ccd66d",
            "subnet_id": "subnet-00aa639f128afcfaf"
          },
          "dependencies": [
            "aws_internet_gateway.my-app-gw",
            "aws_route_table.myapp-RT",
            "aws_subnet.dev-sub-2",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545268153107:security-group/sg-0bbdde8fba303a09c",
            "description": "Allow TLS inbound traffic for my servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbdde8fba303a09c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "31.54.110.100/32"
                ],
                "description": "Allow from my local machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-app-sg",
            "name_prefix": "",
            "owner_id": "545268153107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-app_SG"
            },
            "tags_all": {
              "Name": "my-app_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0a52de2e05b3a60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545268153107:subnet/subnet-0b87a0ba9f324bf53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b87a0ba9f324bf53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "545268153107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "docker-ec2-subnet-1"
            },
            "tags_all": {
              "Name": "docker-ec2-subnet-1"
            },
            "vpc_id": "vpc-0d0a52de2e05b3a60"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545268153107:subnet/subnet-00aa639f128afcfaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00aa639f128afcfaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "545268153107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "docker-ec2-subnet-2"
            },
            "tags_all": {
              "Name": "docker-ec2-subnet-2"
            },
            "vpc_id": "vpc-0d0a52de2e05b3a60"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "development-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545268153107:vpc/vpc-0d0a52de2e05b3a60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084ba2103e29fdf77",
            "default_route_table_id": "rtb-0a599a735f7577822",
            "default_security_group_id": "sg-0f64ebb3a0001a8ae",
            "dhcp_options_id": "dopt-0f757b16158d3b790",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0a52de2e05b3a60",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a599a735f7577822",
            "owner_id": "545268153107",
            "tags": {
              "Name": "docker-ec2-vpc"
            },
            "tags_all": {
              "Name": "docker-ec2-vpc"
            }
          }
        }
      ]
    }
  ]
}